core (setup): start fleshing out

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,10 @@
       "@hooks/*": ["hooks/*"],
       "@lib/*": ["lib/*"],
       "@types/*": ["types/*"],
-      "@router/*": ["router/*"]
+      "@router/*": ["router/*"],
+      "@routes/*": ["routes/*"],
+      "@util/*": ["util/*"],
+      "@context/*": ["context/*"]
     },
 
     /* Linting */
