--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,7 @@
             "@models/*": ["models/*"],
             "@router/*": ["router/*"],
             "@routes/*": ["routes/*"],
-            "@util/*": ["util/*"],
+            "@utils/*": ["utils/*"],
             "@state/*": ["state/*"],
             "@context/*": ["context/*"]
         },
