--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.49.4",
         "lucide-react": "^0.488.0",
+        "luxon": "^3.6.1",
         "nanoid": "^5.1.5",
         "openai": "^4.94.0",
         "react": "^19.0.0",
@@ -20,6 +22,7 @@
     "devDependencies": {
         "@eslint/js": "^9.21.0",
         "@tailwindcss/vite": "^4.1.3",
+        "@types/luxon": "^3.6.2",
         "@types/node": "^22.14.0",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
