feature(tasks): Move supabase logic to service and polish created-by tab usage

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,7 +30,8 @@
             "@utils/*": ["utils/*"],
             "@state/*": ["state/*"],
             "@context/*": ["context/*"],
-            "@styles/*": ["styles/*"]
+            "@styles/*": ["styles/*"],
+            "@services/*": ["services/*"]
         },
 
         /* Linting */
