--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@lottiefiles/dotlottie-react": "^0.13.4",
         "@supabase/supabase-js": "^2.49.4",
         "lucide-react": "^0.488.0",
         "luxon": "^3.6.1",
